# ErikKernel

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  IPC.md  README.MD  aarch64.cmake  x64.cmake  x86_64.cmake
include/: acpi.h  arch.h  debug.h  elf.h  erikboot.h  fs.h  heap.h  list.h  memory.h  paging.h  serial.h  spinlock.h  syscall.h  task.h
include/arch/x86_64/: apic.h  gdt.h  idt.h  io.h  msr.h  paging.h  serial.h  syscall.h
src/: acpi.c  debug.c  elf.c  fs.c  heap.c  linker.ld  list.c  main.c  memory.c  serial.c
src/arch/aarch64/: arch.c  evt.S  paging.c  pl011.c
src/arch/x86_64/: ap_entry.S  apic.c  arch.c  gdt.c  idt.c  isrs.S  paging.c  serial.c  syscall.c  syscall_entry.S  task.c  util.S
